# ComputerArchitectureClassProject

./: .gitignore  CMakeLists.txt  README.md
Testing_Programs/TestingProgram1/: imem1.asm
Testing_Programs/TestingProgram3/: imem2.asm
addparallel/: bustrace.txt  dsram0.txt  dsram1.txt  dsram2.txt  dsram3.txt  imem0.asm  imem0.txt  imem1.asm  imem1.txt  imem2.asm  imem2.txt  imem3.asm  imem3.txt  memin.txt  regout0.txt  regout1.txt  regout2.txt  regout3.txt  stats0.txt  stats1.txt  stats2.txt  stats3.txt
addserial/: bustrace.txt  core2trace.txt  dsram0.txt  imem0.asm  imem0.txt  regout0.txt  stats0.txt
assembler_example/: CMakeLists.txt
counter/: bustrace.txt  core0trace.txt  core1trace.txt  core2trace.txt  core3trace.txt  imem0.asm  imem0.txt  imem1.asm  imem1.txt  imem2.asm  imem2.txt  imem3.asm  imem3.txt  regout0.txt  regout1.txt  regout2.txt  regout3.txt  stats0.txt  stats1.txt  stats2.txt  stats3.txt
example/: stats2.txt  stats3.txt
example1-simple_halt/: stats0.txt
example2-combinatorics/: core0trace.txt  imem0.asm  imem0.txt  imem3.asm  regout0.txt  stats0.txt
example3-jump_operation/: core0trace.txt  imem0.asm  imem0.txt  regout0.txt  stats0.txt
example5-load_operation/: bustrace.txt  dsram0.txt  imem0.asm  imem0.txt  memin.txt  stats0.txt  tsram0.txt
example6-store_operation/: bustrace.txt  core0trace.txt  dsram0.txt  imem0.asm  imem0.txt  imem1.asm  stats0.txt  tsram0.txt
example7-full_test_example/: bustrace.txt  core0trace.txt  core1trace.txt  core2trace.txt  core3trace.txt  stats2.txt  stats3.txt
headers/: bus_manager.h  bus_request.h  bus_requestor.h  bus_snooper.h  cache.h  cache_block.h  constants.h  core.h  core_pipeline.h  decode_stage.h  defines.h  execute_stage.h  fetch_stage.h  file_handler.h  flip_flop.h  instruction.h  main.h  main_memory.h  memory_stage.h  pipeline_object.h  simulator.h  stage_data.h  writeback_stage.h
src/: bus_manager.c  bus_request.c  bus_requestor.c  bus_snooper.c  cache.c  cache_block.c  core.c  core_pipeline.c  decode_stage.c  execute_stage.c  fetch_stage.c  file_handler.c  instruction.c  main.c  main_memory.c  memory_stage.c  pipeline_object.c  simulator.c  stage_data.c  writeback_stage.c
